# public/swagger.json
@@ -72,8 +72,9 @@
 					}
 				},
 				"required": [
-					"id",
-					"game_id"
+					"game_id",
+					"rating",
+					"review_text"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -113,6 +114,36 @@
 				],
 				"security": [],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateReview",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ReviewDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Reviews"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ReviewDTO"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/reviews/{id}": {
