# src/dto/review.dto.ts
@@ -2,9 +2,9 @@ import { Game } from "../models/game.model";
 import { GameDTO } from "./game.dto";
 
 export interface ReviewDTO {
-    id : number
+    id?: number
     game ?: GameDTO
     game_id: number
-    rating ?: number
-    review_text ?: string
+    rating : number
+    review_text : string
 }
